Fix horizontal scroller in the case that an image is missing

--- a/docroot/sites/all/themes/escrow/sass/partials/components/general/_horizontal_scroller.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/general/_horizontal_scroller.scss
@@ -9,6 +9,7 @@
     width: 100%; /* This will be adjusted via javascript. */
     overflow: hidden;
     margin: 0 auto;
+    vertical-align: top;
 
     figure {
       display: inline-block;
